[project]
name = "darts"
version = "0.1.0"
description = "Lightning Differentiable Architecture Search: A modern PyTorch Lightning reimplementation of Differentiable Architecture Search (DARTS)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightning>=2.4.0",
    "torch>=2.4.1",
]
